# your-exam

./: .gitignore  README.md
FastExamSystem/: pyproject.toml
FastExamSystem/app/: config.py  main.py  settings.py
FastExamSystem/app/auth/: models.py  password.py  routes.py  security.py  utils.py
FastExamSystem/app/models/: exam.py
FastExamSystem/app/routers/: exam.py
next_exam_system/: .gitignore  next.config.ts  package-lock.json  package.json
next_exam_system/src/app/(user)/login/: page.tsx
next_exam_system/src/app/(user)/signup/: page.tsx
next_exam_system/src/app/_lib/: api.ts  auth.ts  routes.ts
next_exam_system/src/app/exam/center/: page.tsx
next_exam_system/src/app/exam/create/: page.tsx
next_exam_system/src/components/: exam_center.tsx  exam_select.tsx  login.tsx  sign_up.tsx
